--- a/views/stockmanagement.ejs
+++ b/views/stockmanagement.ejs
@@ -143,21 +143,23 @@
               </tr>
             </thead>
             <tbody>
+              <% if (prods) { %> <% for (let dat of prods) { %>
               <tr>
-                <td>001</td>
-                <td>Sugar</td>
-                <td>Kg</td>
-                <td>1,000</td>
-                <td>350</td>
+                <td><%= dat.id %></td>
+                <td><%= dat.product_name %></td>
+                <td><%= dat.unit %></td>
+                <td><%= dat.reorder_level %></td>
+                <td>
+                <%= dat.total_quantity %></td>
                 <td>
                   <div class="progress progress-bar-xs mb-0 ">
                     <div class="progress-bar progress-bar-danger" style="width: 35%"></div>
                   </div>
                 </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
+                <td><%= moment(dat.last_stock_in_date).format('Do MMMM, YYYY') %></td>
+                <td>-</td>
                 <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
+                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" onclick="reorderLevel('<%= dat.id %>')" data-bs-original-title="Edit">
                     <span class="icon"><i class="fas fa-edit"></i></span>
                 </a>
                   <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
@@ -166,168 +168,8 @@
                 </td>
                 
               </tr>
-              <tr>
-                <td>002</td>
-                <td>Cooking Oil</td>
-                <td>Litres</td>
-                <td>500</td>
-                <td>100</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 20%"></div>
-                  </div>
-                </td>
-                <td>December 11, 2015</td>
-                <td>December 13, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>003</td>
-                <td>Tea</td>
-                <td>Kg</td>
-                <td>900</td>
-                <td>145</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 15%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>004</td>
-                <td>Mealie-Meal</td>
-                <td>Kg</td>
-                <td>1,000</td>
-                <td>550</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 55%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>005</td>
-                <td>Coffee</td>
-                <td>Kg</td>
-                <td>1,000</td>
-                <td>600</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 60%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>006</td>
-                <td>Oranges</td>
-                <td>Kg</td>
-                <td>100</td>
-                <td>63</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 63%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>007</td>
-                <td>24 Hour Pack</td>
-                <td>Kg</td>
-                <td>1,000</td>
-                <td>730</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 73%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-              <tr>
-                <td>008</td>
-                <td>Chicken</td>
-                <td>Kg</td>
-                <td>1,000</td>
-                <td>50</td>
-                <td>
-                  <div class="progress progress-bar-xs mb-0 ">
-                    <div class="progress-bar progress-bar-danger" style="width: 5%"></div>
-                  </div>
-                </td>
-                <td>December 15, 2015</td>
-                <td>December 15, 2015</td>
-                <td>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-primary flush-soft-hover" data-bs-toggle="modal" data-bs-target="#reorderModal" data-bs-original-title="Edit">
-                    <span class="icon"><i class="fas fa-edit"></i></span>
-                </a>
-                  <a href="#" class="btn btn-icon btn-rounded btn-flush-danger flush-soft-hover" data-bs-toggle="tooltip" data-bs-original-title="Delete">
-                    <span class="icon"><i class="fas fa-trash"></i></span>
-                  </a>
-                </td>
-                
-              </tr>
-          
+              <% } %>
+             <% } %>  
             </tbody>
             </table>
             </div>
@@ -339,19 +181,13 @@
       <div class="modal-dialog" role="document">
           <div class="modal-content">
               <div class="modal-header">
-                  <h5 class="modal-title" id="reorderModalLabel">Set Reorder Level</h5><br>
-                  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                  </button>
+                 
               </div>
               <div class="modal-body">
-                  <!-- Add your form elements for setting reorder level here -->
-                  <label for="reorderLevel">Reorder Level:</label>
-                  <input type="text" class="form-control" id="reorderLevel">
+                
               </div>
               <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+            
               </div>
           </div>
       </div>
@@ -622,5 +458,32 @@ const unit = cells.eq(3).text().trim();
 
   // Initialize the Reorder Levels table
   populateReorderLevelsTable();
+  function reorderLevel(params1) {
+    var modal = document.getElementById('reorderModal');
+var modalTitle = modal.querySelector('.modal-title');
+var modalBody = modal.querySelector('.modal-body');
+  // Set the modal title and body content
+  modalBody.innerHTML = `
+  <form action="/reorder-level" method="post">
+    <input type="hidden" name="id" value="${params1}" />
+  <div class="modal-header">
+                  <h5 class="modal-title" id="reorderModalLabel">Set Reorder Level</h5><br>
+                  <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <!-- Add your form elements for setting reorder level here -->
+                  <label for="reorderLevel">Reorder Level:</label>
+                  <input type="text" class="form-control" name="reorderLevel" id="reorderLevel">
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="submit" class="btn btn-primary">Save changes</button>
+              </div>   
+              </form>       
+  `;
+            }
+
 </script>
 
