Updated .gitignore to ignore .env filekmm

--- a/views/productmovement.ejs
+++ b/views/productmovement.ejs
@@ -33,7 +33,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"></path>
                   </svg>
-                  <span>Dashboard</span>
+                  <span>Product Movement</span>
                 </a>
               </li>
             </ol>
