--- a/views/index.ejs
+++ b/views/index.ejs
@@ -296,26 +296,20 @@
                               </tr>
                           </thead>
                           <tbody>
+                            <% if (prods.length > 0 ) { %> <% for (let dat of prods) { %>
+                              <% if (dat.total_quantity <= dat.reorder_level  ) { %>
                               <tr>
                                   <td>
-                                      <a href="productmovement.html" contenteditable="false">Sugar</a>
+                                      <a href="/productmovement" contenteditable="false"><%= dat.product_name %></a>
                                   </td>
-                                  <td>Bak Logistics</td>
-                                  <td contenteditable="false">100</td>
-                                  <td contenteditable="false">50</td>
-                                  <td contenteditable="false">2023-09-10</td>
+                                  <td><%= dat.warehouse %></td>
+                                  <td contenteditable="false"><%= dat.total_quantity %></td>
+                                  <td contenteditable="false"><%= dat.reorder_level %></td>
+                                  <td contenteditable="false"><%= moment(dat.last_stock_in_date).format('Do MMMM, YYYY') %></td>
                                  
                               </tr>
-                              <tr>
-                                  <td>
-                                      <a href="productmovement2.html" contenteditable="false">Cooking Oil</a>
-                                  </td>
-                                  <td>Bak Logistics</td>
-                                  <td>100</td>
-                                  <td>80</td>
-                                  <td contenteditable="false">2023-09-15</td>
-                                 
-                              </tr>
+                              <% } %>
+                             <% } %><% } %>      
                               <!-- Add more rows as needed -->
                           </tbody>
                       </table>
@@ -326,134 +320,142 @@
       </section>
   </div>
       <!-- Nav Tabs -->
-      <ul class="nav nav-tabs mt-3" id="productstabs" role="tablist">
-        <li class="nav-item" role="presentation">
-            <a class="nav-link active" id="allproducts-tab" data-bs-toggle="tab" href="#allproducts" role="tab" aria-controls="allproducts" aria-selected="true">All Products</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="drygoods-tab" data-bs-toggle="tab" href="#drygoods" role="tab" aria-controls="drygoods" aria-selected="false">Dry Goods</a>
-        </li>
-        <li class="nav-item" role="presentation">
-            <a class="nav-link" id="perishables" data-bs-toggle="tab" href="#perishables" role="tab" aria-controls="perishables" aria-selected="false">Perishables</a>
-        </li>
-      </ul>
-      
-      <!-- Tab Content -->
-      <div class="tab-content" id="productstabsContent">
-        <!-- All Products -->
-        <div class="tab-pane fade show active" id="allproducts" role="tabpanel" aria-labelledby="allproducts-tab">
-            <h2 class="mt-3">All Products</h2>
-            List of all products.
-            <!-- Table for pending dispatches goes here -->
-            <table class="table table-striped table-hover">
-              <thead class="table-primary">
-                  <tr>
-                      <th>No.</th>
-                      <th>Product</th>
-                      <th>Warehouse</th>
-                      <th>Opening Balance</th>
-                      <th>Dispatched</th>
-                      <th>Quantity in Stock</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                      <td>1</td>
-                      <td><a href="#" contenteditable="false">Bread</a></td>
-                      <td>Warehouse A</td>
-                      <td>100</td>
-                      <td>20</td>
-                      <td>80</td>
-                  </tr>
-                  <tr>
-                      <td>2</td>
-                      <td><a href="#" contenteditable="false">Milk</a></td>
-                      <td>Warehouse B</td>
-                      <td>200</td>
-                      <td>30</td>
-                      <td>170</td>
-                  </tr>
-                  <tr>
-                      <td>3</td>
-                      <td><a href="productmovement.html" contenteditable="false">Sugar</a></td>
-                      <td>Warehouse C</td>
-                      <td>150</td>
-                      <td>40</td>
-                      <td>110</td>
-                  </tr>
-                  <!-- Add more rows for other products -->
-              </tbody>
-          </table>
-        </div>
-      
-        <!-- Dry Goods  Tab -->
-        <div class="tab-pane fade" id="drygoods" role="tabpanel" aria-labelledby="drygoods-tab">
-            <h2 class="mt-3">Dry Goods</h2>
-            <!-- Table for dry products goes here -->
-            <table class="table table-striped table-hover">
-              <thead class="table-primary">
-                  <tr>
-                      <th>No.</th>
-                      <th>Product</th>
-                      <th>Warehouse</th>
-                      <th>Opening Balance</th>
-                      <th>Dispatched</th>
-                      <th>Quantity in Stock</th>
-                  </tr>
-              </thead>
-              <tbody>
-           
-                  <tr>
-                      <td>1</td>
-                      <td><a href="productmovement.html" contenteditable="false">Sugar</a></td>
-                      <td>Warehouse C</td>
-                      <td>150</td>
-                      <td>40</td>
-                      <td>110</td>
-                  </tr>
-                  <!-- Add more rows for other products -->
-              </tbody>
-          </table>
-        </div>
-      
-        <!-- Perishables Dispatch Tab -->
-        <div class="tab-pane fade" id="perishables" role="tabpanel" aria-labelledby="perishables-tab">
-            <h2 class="mt-3">Perishables</h2>
-            <!-- Table for cancelled dispatches goes here -->
-            <table class="table table-striped table-hover">
-              <thead class="table-primary">
-                  <tr>
-                      <th>No.</th>
-                      <th>Product</th>
-                      <th>Warehouse</th>
-                      <th>Opening Balance</th>
-                      <th>Dispatched</th>
-                      <th>Quantity in Stock</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                      <td>1</td>
-                      <td><a href="#" contenteditable="false">Bread</a></td>
-                      <td>Warehouse A</td>
-                      <td>100</td>
-                      <td>20</td>
-                      <td>80</td>
-                  </tr>
-                  <tr>
-                      <td>2</td>
-                           <td><a href="#" contenteditable="false">Milk</a></td>
-                      <td>Warehouse B</td>
-                      <td>200</td>
-                      <td>30</td>
-                      <td>170</td>
-                  </tr>
+<ul class="nav nav-tabs mt-3" id="productstabs" role="tablist">
+
+  <li class="nav-item" role="presentation">
+      <a class="nav-link active" id="allproducts-tab" data-bs-toggle="tab" href="#allproducts" role="tab" aria-controls="allproducts" >All Products</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link " id="allproducts-tab1" data-bs-toggle="tab" href="#allproducts1" role="tab" aria-controls="allproducts" >Dry Goods</a>
+</li>
+<li class="nav-item" role="presentation">
+  <a class="nav-link " id="allproducts-tab2" data-bs-toggle="tab" href="#allproducts2" role="tab" aria-controls="allproducts" >Perishables</a>
+</li>
+ 
+</ul>
+
+<!-- Tab Content -->
+<div class="tab-content" id="productstabsContent">
+  <!-- All Products -->
+  <div class="tab-pane fade show active" id="allproducts" role="tabpanel" aria-labelledby="allproducts-tab">
+       <h2 class="mt-3">All Products</h2>
+          List of all products.
+          <!-- Table for pending dispatches goes here -->
+          <table class="table table-striped table-hover">
+            <thead class="table-primary">
+                <tr>
+                    <th>No.</th>
+                    <th>Product</th>
+                    <th>Warehouse</th>
+                    <th>Opening Balance</th>
+                    <th>Dispatched</th>
+                    <th>Quantity in Stock</th>
+                </tr>
+            </thead>
+            <tbody>
+              <% if (prods.length > 0) { %>
+                <% const pageSize = 5; %>
+                <% const startIndex = 0; %>
+                <% const endIndex = 5; %>
             
-                  <!-- Add more rows for other products -->
-              </tbody>
-          </table>
-        </div>
-      </div>
+                <% for (let i = startIndex; i < endIndex; i++) { %>
+                    <% let dat = prods[i]; %>
+                  
+                      <tr>
+                          <td><%= dat.id %></td>
+                          <td><a href="#" contenteditable="false"><%= dat.product_name %></a></td>
+                          <td><%= dat.warehouse %></td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td><%= dat.total_quantity %></td>
+                      </tr>
+                <% } %>
+            <% } %>
+                <!-- Add more rows for other products -->
+            </tbody>
+        </table>
+        <a href="/products">more</a>
+  </div>
+  <div class="tab-pane fade" id="allproducts1" role="tabpanel" aria-labelledby="allproducts-tab1">
+    <h2 class="mt-3">Dry Goods</h2>
+       <!-- Table for pending dispatches goes here -->
+       <table class="table table-striped table-hover">
+         <thead class="table-primary">
+             <tr>
+                 <th>No.</th>
+                 <th>Product</th>
+                 <th>Warehouse</th>
+                 <th>Opening Balance</th>
+                 <th>Dispatched</th>
+                 <th>Quantity in Stock</th>
+             </tr>
+         </thead>
+         <tbody>
+         
+          <% if (prods.length > 0) { %>
+
+            <% let count1 = 0;
+            for (let dat of prods) { %>
+              <% if (dat.product_type === 'Dry Goods' && count1 < 5) { %>
+                <tr>
+                  <td><%= dat.id %></td>
+                  <td><a href="#" contenteditable="false"><%= dat.product_name %></a></td>
+                  <td><%= dat.warehouse %></td>
+                  <td>-</td>
+                  <td>-</td>
+                  <td><%= dat.total_quantity %></td>
+                </tr>
+                <% count1++; %>
+              <% } %>
+            <% } %>
+          
+          <% } %>
+             <!-- Add more rows for other products -->
+         </tbody>
+     </table>
+     <a href="/products">more</a>
+</div>
+<div class="tab-pane fade" id="allproducts2" role="tabpanel" aria-labelledby="allproducts-tab2">
+  <h2 class="mt-3">Perishables</h2>
+     <!-- Table for pending dispatches goes here -->
+     <table class="table table-striped table-hover">
+       <thead class="table-primary">
+           <tr>
+               <th>No.</th>
+               <th>Product</th>
+               <th>Warehouse</th>
+               <th>Opening Balance</th>
+               <th>Dispatched</th>
+               <th>Quantity in Stock</th>
+           </tr>
+       </thead>
+       <tbody>
+       
+        <% if (prods.length > 0) { %>
+
+          <% let count1 = 0;
+          for (let dat of prods) { %>
+            <% if (dat.product_type === 'Perishable' && count1 < 5) { %>
+              <tr>
+                <td><%= dat.id %></td>
+                <td><a href="#" contenteditable="false"><%= dat.product_name %></a></td>
+                <td><%= dat.warehouse %></td>
+                <td>-</td>
+                <td>-</td>
+                <td><%= dat.total_quantity %></td>
+              </tr>
+              <% count1++; %>
+            <% } %>
+          <% } %>
+        
+        <% } %>
+           <!-- Add more rows for other products -->
+       </tbody>
+   </table>
+   <a href="/products">more</a>
+</div>
+
+</div>
       <div class="row">
         <div class="col-md-6">
         </div>
@@ -764,3 +766,13 @@
     
  
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <script>
+      $(document).ready(function() {
+    $('.nav-tabs a').click(function (e) {
+        e.preventDefault();
+        $(this).tab('show');
+    });
+});
+    </script>
