Updated .gitignore to ignore .env filekmmkk

--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -253,6 +253,19 @@
                   <span>Support</span>
                 </a>
               </li>
+              <li class="mb-2">
+                <a class="d-flex py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="/logout">
+                  <svg class="me-3" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M10 17.5C14.1421 17.5 17.5 14.1421 17.5 10C17.5 5.85786 14.1421 2.5 10 2.5C5.85786 2.5 2.5 5.85786 2.5 10C2.5 14.1421 5.85786 17.5 10 17.5Z" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M10 13.125C11.7259 13.125 13.125 11.7259 13.125 10C13.125 8.27411 11.7259 6.875 10 6.875C8.27411 6.875 6.875 8.27411 6.875 10C6.875 11.7259 8.27411 13.125 10 13.125Z" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M7.79037 7.79028L4.69678 4.69669" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M12.2097 7.79028L15.3033 4.69669" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M12.2097 12.2097L15.3033 15.3033" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    <path d="M7.79037 12.2097L4.69678 15.3033" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                  </svg>
+                  <span>Log Out</span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
