--- a/views/stockmanagement.ejs
+++ b/views/stockmanagement.ejs
@@ -1,4 +1,3 @@
-
         <div class="mx-auto ms-lg-80 ps-lg-4">
           <% for (let error of errors) { %>
             <div class="alert alert-danger" role="alert"><%= error.message %></div>
@@ -108,7 +107,7 @@
                       <td><%= dat.supplier %></td>
                       <td><%= dat.warehouse %></td>
                       <td>
-                        <a href="#" class="btn btn-primary btn-sm view-btn">View</a>
+                        <a href="#" class="btn btn-primary btn-sm view-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop" onclick="openViewModal('<%= dat.stock_date %>','<%=  dat.stock_id %>','<%=  dat.supplier %>','<%=  dat.warehouse %>','<%=  JSON.stringify(stock_products) %>')">View</a>
                         <a href="#" class="btn btn-danger btn-sm">Delete</a>
                       </td>
                     </tr>
@@ -192,6 +191,44 @@
           </div>
       </div>
   </div>
+  <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Stock Card</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Grid row for each piece of information -->
+        <div id="requesterSummary1">
+              
+        </div>
+        <div class="table-responsive">
+          <table class="table">
+  
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Product</th>
+                <th scope="col">Unit Measure</th>
+                <th scope="col">Quantity</th>
+              </tr>
+            </thead>
+            <tbody id="replaceTable1">
+           
+            </tbody>
+          </table>
+        </div>
+       
+      </div>
+      <div class="modal-footer">
+ 
+       
+      </div>
+    </div>
+  </div>
+</div>
 <!-- New Stock Modal -->
 <div class="modal fade" id="newStockModal" tabindex="-1" aria-labelledby="newStockModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg">
@@ -210,8 +247,9 @@
             <label for="warehouse" class="form-label">Warehouse</label>
             <select class="form-select" id="warehouse" required>
               <option value="">Select Warehouse</option>
-              <option value="Warehouse A">Warehouse A</option>
-              <option value="Warehouse B">Warehouse B</option>
+              <% if (warehouse) { %> <% for (let dat of warehouse) { %>
+                <option value="<%= dat.warehouse_name %>"><%= dat.warehouse_name %></option>
+                <% } %><% } %>
               <!-- Add more warehouse options as needed -->
             </select>
           </div>
@@ -225,9 +263,9 @@
             <label for="product" class="form-label">Product</label>
             <select class="form-select" id="product" required>
               <option value="">Select Product</option>
-              <option value="Bread">Bread</option>
-              <option value="Milk">Milk</option>
-              <option value="Sugar">Sugar</option>
+              <% if (prods) { %> <% for (let dat of prods) { %>
+                <option value="<%= dat.product_name %>"><%= dat.product_name %></option>
+                <% } %><% } %>
               <!-- Add more product options as needed -->
             </select>
           </div>
@@ -338,7 +376,7 @@
         <td>${item.alertLevel}</td>
         <td>${item.currentLevel}</td>
         <td>
-          <button class="btn btn-primary view-btn" data-index="${index}">View</button>
+          <button class="btn btn-primary view-btn" data-index="${index}" >View</button>
           <button class="btn btn-danger">Delete</button>
         </td>
       `;
@@ -486,4 +524,81 @@ var modalBody = modal.querySelector('.modal-body');
             }
 
 </script>
+<script>
+  function openViewModal(params1,params2,params3,params4,params5) {
+    var modal = document.getElementById('staticBackdrop');
+var modalTitle = modal.querySelector('.modal-title');
+var modalBody = modal.querySelector('.modal-body');
+var modalFooter = modal.querySelector('.modal-footer');
+const requesterSummary = document.getElementById('requesterSummary1');
+const replace = document.getElementById('replaceTable1');
+let productsArray = JSON.parse(params5);
+  // Set the modal title and body content
+  requesterSummary.innerHTML =  `
+  <div class="row">
+          <div class="col-auto">
+            <p>Date:</p>
+          </div>
+          <div class="col">
+            <p><b>${params1}</b></p>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="col-auto">
+            <p>Reference:</p>
+          </div>
+          <div class="col">
+            <p><b>${params2}</b></p>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="col-auto">
+            <p>Supplier:</p>
+          </div>
+          <div class="col">
+            <p><b>${params3}</b></p>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="col-auto">
+            <p>Warehouse:</p>
+          </div>
+          <div class="col">
+            <p><b>${params4}</b></p>
+          </div>
+        </div>
+      
+        <div class="row">
+          <div class="col-auto">
+            <p>No. of products:</p>
+          </div>
+          <div class="col">
+            <p><b>${productsArray.length}</b></p>
+          </div>
+        </div>
+       
+  `;
+  let count =1;
+          productsArray.forEach((product) => {
+            if (product.stock_id+'' === params2) {
+                 replace.innerHTML += `
+                 <tr>
+              <td>${count}</td>
+              <td>${product.product_name}</td>
+              <td>${product.unit}</td>
+              <td>${product.quantity}</td>
+                 </tr>
+                 
+                 `;
+           
+                count +=1
+            }
+             });
+  modalFooter.innerHTML = `       <button type="button" class="btn btn-primary"><i class="fa-download"></i>Export</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>`;
+            }
 
+</script>
