--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -9,7 +9,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-bootstrap.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap/foot.css">
-
+   <style>
+    .hidden-column {
+    display: none;
+}
+   </style>
   
 </head>
 <body>
