Updated .gitignore to ig

--- a/views/resetconfirmation.ejs
+++ b/views/resetconfirmation.ejs
@@ -22,7 +22,7 @@
               </div>
               <h4 class="text-center mt-4">Password reset instructions have been sent to your registered email address.</h4>
               <div class="text-center mt-4">
-                <a class="text-decoration-none" href="login.html">Back to Login</a>
+                <a class="text-decoration-none" href="/login">Back to Login</a>
               </div>
               
         
