--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="shuffle-for-bootstrap.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap/foot.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    <style>
     .hidden-column {
     display: none;
