Updated .gitignore to igl

--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -10,6 +10,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/bootstrap/foot.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
    <style>
     .hidden-column {
     display: none;
@@ -65,7 +67,7 @@
                   </span>
                 </a>
                 <div class="collapse ps-6" id="menus1-4">
-                  <a class="d-flex mb-2 py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="products">
+                  <a class="d-flex mb-2 py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="/products">
                     <svg class="me-3" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M5.95325 10.3282L11.8907 3.1407L16.875 3.125L16.8593 8.1093L9.67184 14.0468" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                       <path d="M7.8125 12.1875L12.5 7.5" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
