Updated .gitignore to iglg

--- a/views/dispatch.ejs
+++ b/views/dispatch.ejs
@@ -435,7 +435,7 @@
                     <select class="form-select  js-example-basic-single" id="unit_formation" required>
                       <option value="">Select Delivery Center</option>
                     <% if (unit.length > 0) { %> <% for (let dat of unit) { %>
-                      <option value="<%= dat.id %>"><%= dat.unit_name %></option>
+                      <option value="<%= dat.unit_name %>"><%= dat.unit_name %></option>
                       <% } %><% } %>
                     </select>
                   </div>
