Updated .gitignore to iglgfdkg

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,7 +54,7 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="p-8 border rounded-2">
-              <h1 class="mb-4">10</h1>
+              <h1 class="mb-4"><%= delivery_units.length %></h1>
               <p class="mb-0">
                 <span>Delivery Units</span>
               </p>
@@ -62,7 +62,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0">
             <div class="p-8 border rounded-2">
-              <h1 class="mb-4">20</h1>
+              <h1 class="mb-4"><%= prods.length %></h1>
               <p class="mb-0">
                 <span>Products</span>
               </p>
@@ -70,7 +70,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4 mb-4 mb-md-0">
             <div class="p-8 border rounded-2">
-              <h1 class="mb-4">4</h1>
+              <h1 class="mb-4">-</h1>
               <p class="mb-0">
                 <span>Products in Reorder Level</span>
               </p>
