--- a/views/stockmanagement.ejs
+++ b/views/stockmanagement.ejs
@@ -285,6 +285,7 @@
                 <option value="Crates">Crates</option>
                 <option value="Heads">Heads</option>
                 <option value="Cases">Cases</option>
+                <option value="Each">Each</option>
                 <!-- Add more unit options as needed -->
               </select>
             </div>
