Updated .gitignore to iglgfdkgsll

--- a/views/dispatch.ejs
+++ b/views/dispatch.ejs
@@ -524,6 +524,8 @@
                         <th>Location</th>
                         <th>Delivery Point</th>
                         <th>Quantity</th>
+                        <th>Contact</th>
+                        <th>Phone Number</th>
                       </tr>
                     </thead>
                     <tbody id="productTableBody">
@@ -835,6 +837,8 @@
                   <td>${product.location}</td>
                   <td>${product.delivery_point}</td>
                   <td>${product.quantity} ${product.unit}</td>
+                  <td>${product.contact_person}</td>
+                  <td>${product.phone}</td>
                      </tr>
                      
                      `;
