--- a/views/orderbook.ejs
+++ b/views/orderbook.ejs
@@ -52,6 +52,35 @@
                             <label for="orderbookFile" class="form-label">Upload Orderbook File:</label>
                             <input type="file" class="form-control" id="file" name="excelFile" accept=".xlsx, .xls" />
                         </div>
+                        <div class="mt-3">
+                          <h5>Upload File Format</h5>
+                          <table class="table table-bordered">
+                            <caption><i>Products to be ordered alphabetically</i></caption>
+                            <thead>
+                              <tr>
+                                <th>Unit</th>
+                                <th>Delivery Point</th>
+                                <th>Products:</th>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                                <th>4</th>
+                                <th>5</th>
+                                <th>6</th>
+                                <th>Etc..</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+          
+                              </tr>
+                            </tbody>
+                          </table>
+                        </div>
+                        <!-- Link to download sample import document -->
+                        <div class="mt-3">
+                          <p>Download sample import document <a href="/order upload.xlsx" download>here</a>.</p>
+                        </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
