--- a/views/index.ejs
+++ b/views/index.ejs
@@ -322,7 +322,9 @@
             <tr>
               <td><%= dat.id %></td>
               <td>
-                <a href="#" contenteditable="false"><%= dat.product_name %></a>
+                <a href="/productmovement" contenteditable="false"
+                  ><%= dat.product_name %></a
+                >
               </td>
               <td><%= dat.warehouse %></td>
               <td>-</td>
@@ -360,7 +362,9 @@
             <tr>
               <td><%= dat.id %></td>
               <td>
-                <a href="#" contenteditable="false"><%= dat.product_name %></a>
+                <a href="/productmovement" contenteditable="false"
+                  ><%= dat.product_name %></a
+                >
               </td>
               <td><%= dat.warehouse %></td>
               <td>-</td>
@@ -398,7 +402,9 @@
             <tr>
               <td><%= dat.id %></td>
               <td>
-                <a href="#" contenteditable="false"><%= dat.product_name %></a>
+                <a href="/productmovement" contenteditable="false"
+                  ><%= dat.product_name %></a
+                >
               </td>
               <td><%= dat.warehouse %></td>
               <td>-</td>
@@ -558,7 +564,7 @@
             </thead>
             <tbody>
               <tr>
-                <td><a href="./productmovement.html">Sugar</a></td>
+                <td><a href="/stockrecon">Sugar</a></td>
                 <td><a href="./dnote.html">PO12345</a></td>
                 <td>Received</td>
                 <td>10,000</td>
@@ -566,7 +572,7 @@
                 <td>-</td>
               </tr>
               <tr>
-                <td><a href="./productmovement.html">Bananas</a></td>
+                <td><a href="/stockrecon">Bananas</a></td>
                 <td><a href="./dnote.html">DO56789</a></td>
                 <td>Received</td>
                 <td>50</td>
