--- a/views/layouts/index-layout.ejs
+++ b/views/layouts/index-layout.ejs
@@ -83,6 +83,14 @@
                     </svg>
                     <span>Stock Management</span>
                   </a>
+                  <a class="d-flex mb-2 py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="productmovement">
+                    <svg class="me-3" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M2.70833 15L17.2917 15C18.0971 15 18.75 14.316 18.75 13.4722V2.77778C18.75 1.93401 18.0971 1.25 17.2917 1.25L2.70833 1.25C1.90292 1.25 1.25 1.93401 1.25 2.77778V13.4722C1.25 14.316 1.90292 15 2.70833 15Z" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M12.5 18.75H7.5" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                      <path d="M11.25 8.125L8.75 6.875V9.375L11.25 8.125Z" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                    <span>Movement</span>
+                  </a>
                   <a class="d-flex py-3 px-4 align-items-center text-decoration-none text-white fw-bold" href="dispatch">
                     <svg class="me-3" width="20" height="20" viewbox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M13.75 4.375H17.5" stroke="#7A899B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
