--- a/views/productmovement.ejs
+++ b/views/productmovement.ejs
@@ -39,6 +39,74 @@
             </ol>
           </nav>
         </div>
+        <div class="col-12 col-lg-6 d-flex">
+          <a
+            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 ms-lg-auto me-2 shadow rounded-2"
+            href="#"
+            style="width: 40px; height: 40px">
+            <svg
+              width="12"
+              height="12"
+              viewbox="0 0 12 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M5.4375 9.375C7.61212 9.375 9.375 7.61212 9.375 5.4375C9.375 3.26288 7.61212 1.5 5.4375 1.5C3.26288 1.5 1.5 3.26288 1.5 5.4375C1.5 7.61212 3.26288 9.375 5.4375 9.375Z"
+                stroke="#7A899B"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path
+                d="M8.22156 8.22189L10.4997 10.5"
+                stroke="#7A899B"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+            </svg>
+          </a>
+          <a
+            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 me-2 shadow rounded-2"
+            href="#"
+            style="width: 40px; height: 40px">
+            <svg
+              width="12"
+              height="12"
+              viewbox="0 0 12 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.12974 8.29964C1.57041 7.35675 1.37453 6.2421 1.57887 5.165C1.78322 4.0879 2.37374 3.12245 3.23955 2.44994C4.10535 1.77742 5.18688 1.4441 6.28105 1.51257C7.37522 1.58104 8.40676 2.04659 9.18197 2.8218C9.95718 3.597 10.4227 4.62854 10.4912 5.72271C10.5597 6.81688 10.2264 7.89841 9.55386 8.76422C8.88135 9.63003 7.9159 10.2206 6.8388 10.4249C5.76171 10.6293 4.64706 10.4334 3.70416 9.87406L3.70417 9.87401L2.14931 10.3183C2.08498 10.3366 2.01691 10.3375 1.95214 10.3207C1.88738 10.3039 1.82828 10.2701 1.78097 10.2228C1.73366 10.1755 1.69986 10.1164 1.68308 10.0516C1.6663 9.98687 1.66714 9.9188 1.68552 9.85447L2.12977 8.29961L2.12974 8.29964Z"
+                stroke="#7A899B"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+            </svg>
+          </a>
+          <a
+            class="btn btn-outline-light d-inline-flex align-items-center justify-content-center p-0 me-2 shadow rounded-2"
+            href="#"
+            style="width: 40px; height: 40px">
+            <svg
+              width="10"
+              height="12"
+              viewbox="0 0 10 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M4 11H6"
+                stroke="#7A899B"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+              <path
+                d="M1.6988 4.14999C1.69819 3.73489 1.78393 3.32378 1.95108 2.94036C2.11823 2.55694 2.36348 2.20879 2.6727 1.91598C2.98192 1.62317 3.34899 1.39148 3.75275 1.23429C4.15651 1.07709 4.58897 0.997483 5.02522 1.00006C6.84554 1.01294 8.30157 2.45262 8.30157 4.18953V4.49999C8.30157 6.06693 8.64611 6.9762 8.94956 7.47317C8.98225 7.52627 8.99965 7.58663 8.99999 7.64817C9.00034 7.70971 8.98362 7.77025 8.95153 7.82368C8.91944 7.87711 8.87311 7.92155 8.81721 7.9525C8.76131 7.98346 8.69783 7.99984 8.63315 8H1.36685C1.30217 7.99984 1.23867 7.98345 1.18277 7.95249C1.12686 7.92153 1.08053 7.87708 1.04844 7.82364C1.01636 7.7702 0.999648 7.70965 1.00001 7.64811C1.00036 7.58656 1.01777 7.52619 1.05048 7.47309C1.3541 6.97611 1.69879 6.06685 1.69879 4.49999L1.6988 4.14999Z"
+                stroke="#7A899B"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"></path>
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
   </section>
@@ -122,7 +190,11 @@
         placeholder="Search..." />
     </div>
     <div class="col-md-2">
-      <button type="button" class="btn btn-primary mt-3">
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#movementReportModal">
         <i class="fas fa-cog"></i> Generate Report
       </button>
     </div>
@@ -270,22 +342,179 @@
           </ul>
         </nav>
       </div>
+
+      <!-- Product Movement Modal -->
+      <div
+        class="modal fade"
+        id="movementReportModal"
+        tabindex="-1"
+        aria-labelledby="movementReportModalLabel"
+        aria-hidden="true">
+        <div
+          class="modal-dialog modal-xl modal-dialog-scrollable modal-dialog-end">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="movementReportModalLabel">
+                Product Movement Report
+              </h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="card">
+                <div
+                  class="card-header d-flex justify-content-between align-items-center"></div>
+                <div class="d-flex justify-content-center bg-dark">
+                  <img
+                    src="./sirius-assets/images/logos/sirius-logo.png"
+                    alt="Agrifora Logo"
+                    class="me-3"
+                    style="width: 250px; height: auto" />
+                </div>
+                <br />
+                <div class="text-center">
+                  <h2>Product Movement Report</h2>
+                </div>
+                <div class="card-body">
+                  <div class="row mb-3">
+                    <div class="col-md-6">
+                      <p class="mb-1">
+                        Product movement report from {Date}<br />to {Date}
+                      </p>
+                    </div>
+                  </div>
+
+                  <table class="table table-striped table-hover">
+                    <thead class="table-primary">
+                      <tr>
+                        <th>Date</th>
+                        <th>Reference</th>
+                        <th>Description</th>
+                        <th>Qty In</th>
+                        <th>Qty Out</th>
+                        <th>Balance</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>2023-09-15</td>
+                        <td><a href="#">PO12345</a></td>
+                        <td>Stock In</td>
+                        <td>10,000</td>
+                        <td>-</td>
+                        <td>10,000</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-10</td>
+                        <td><a href="#">DO56789</a></td>
+                        <td>Dispatch</td>
+                        <td>-</td>
+                        <td>50</td>
+                        <td>9,950</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-15</td>
+                        <td><a href="#">PO12345</a></td>
+                        <td>Stock In</td>
+                        <td>100</td>
+                        <td>-</td>
+                        <td>10,050</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-10</td>
+                        <td><a href="#">DO56789</a></td>
+                        <td>Dispatch</td>
+                        <td>-</td>
+                        <td>50</td>
+                        <td>10,000</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-15</td>
+                        <td><a href="#">PO12345</a></td>
+                        <td>Stock In</td>
+                        <td>100</td>
+                        <td>-</td>
+                        <td>10,100</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-10</td>
+                        <td><a href="#">DO56789</a></td>
+                        <td>Dispatch</td>
+                        <td>-</td>
+                        <td>100</td>
+                        <td>10,000</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-15</td>
+                        <td><a href="#">PO12345</a></td>
+                        <td>Stock In</td>
+                        <td>100</td>
+                        <td>-</td>
+                        <td>10,100</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-10</td>
+                        <td><a href="#">DO56789</a></td>
+                        <td>Dispatch</td>
+                        <td>-</td>
+                        <td>1000</td>
+                        <td>9,100</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-15</td>
+                        <td><a href="#">PO12345</a></td>
+                        <td>Stock In</td>
+                        <td>100</td>
+                        <td>-</td>
+                        <td>9,200</td>
+                      </tr>
+                      <tr>
+                        <td>2023-09-10</td>
+                        <td><a href="#">DO56789</a></td>
+                        <td>Dispatch</td>
+                        <td>-</td>
+                        <td>5,000</td>
+                        <td>4,200</td>
+                      </tr>
+                      <!-- Add more rows as needed -->
+                      <!-- ... -->
+                    </tbody>
+                  </table>
+
+                  <div><br /></div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal">
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <!-- Footer container -->
-  <div class="main-footer">
-    <span>&copy; 2023. Agrifora Management System. All Rights Reserved.</span>
-    <span
-      >Created by:
-      <a href="http://soxfort.com" target="_blank"
-        >Soxfort Solutions | Intuitive Innovation</a
-      ></span
-    >
-  </div>
-  <!-- main-footer -->
-  <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-  <script src="js/main.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-  <script src="js/charts-demo.js"></script>
 </div>
+<!-- Footer container -->
+<div class="main-footer">
+  <span>&copy; 2023. Agrifora Management System. All Rights Reserved.</span>
+  <span
+    >Created by:
+    <a href="http://soxfort.com" target="_blank"
+      >Soxfort Solutions | Intuitive Innovation</a
+    ></span
+  >
+</div>
+<!-- main-footer -->
+<script src="js/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="js/main.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+<script src="js/charts-demo.js"></script>
